<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:contentPadding="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/projectTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:text="@string/agkika_supplies_2019"/>

        <TextView
            android:id="@+id/projectDescriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="13sp"
            android:layout_marginBottom="8dp"
            android:text="@string/project_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/technologies_used"/>

        <TextView
            android:id="@+id/technologiesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="12sp"
            android:text="@string/java_sqlite"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>